--- a/grpo.ipynb
+++ b/grpo.ipynb
@@ -260,7 +260,7 @@
         "    num_generations=4,  # default: 8\n",
         "    max_prompt_length=128,  # default: 512\n",
         "    # Parameters related to reporting and saving\n",
-        "    report_to=[\"tensorboard\"],\n",
+        "    report_to=\"wandb\",\n",
         "    logging_steps=10,\n",
         "    push_to_hub=True,\n",
         "    save_strategy=\"steps\",\n",
