--- a/grpo.ipynb
+++ b/grpo.ipynb
@@ -58,7 +58,10 @@
       "source": [
         "import wandb\n",
         "\n",
-        "wandb.login()"
+        "wandb.login()\n",
+        "\n",
+        "# Name the project\n",
+        "%env WANDB_PROJECT=Qwen2-0.5B-GRPO-test"
       ],
       "metadata": {
         "id": "BdwP3GYJ42Rk"
@@ -295,7 +298,8 @@
       "id": "ee14158d-e30a-4465-b2a6-2137b7629087",
       "cell_type": "code",
       "source": [
-        "trainer.train()"
+        "trainer.train()\n",
+        "wandb.finish()"
       ],
       "metadata": {
         "trusted": true,
