Cosmos llama configuration

--- a/Turkish_MMLU.ipynb
+++ b/Turkish_MMLU.ipynb
@@ -28,14 +28,29 @@
       "id": "29f3de3e-7a5d-4b28-a675-7db20104022c",
       "cell_type": "code",
       "source": [
-        "!pip install  -U -q trl peft math_verify wandb\n",
-        "# Tested with transformers==4.47.1, trl==0.14.0, datasets==3.2.0, peft==0.14.0, accelerate==1.2.1, math_verify==0.3.3"
+        "!pip install  -U -q trl peft bitsandbytes wandb\n",
+        "# Tested with transformers==4.47.1, trl==0.14.0, datasets==3.2.0, peft==0.14.0, accelerate==1.2.1"
       ],
       "metadata": {
         "trusted": true,
-        "id": "29f3de3e-7a5d-4b28-a675-7db20104022c"
+        "id": "29f3de3e-7a5d-4b28-a675-7db20104022c",
+        "outputId": "1df0503a-1da9-4b83-a18d-1a39205e5d8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m318.3/318.3 kB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m69.7/69.7 MB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m484.9/484.9 kB\u001b[0m \u001b[31m13.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[91m━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m131.5/363.4 MB\u001b[0m \u001b[31m40.8 MB/s\u001b[0m eta \u001b[36m0:00:06\u001b[0m"
+          ]
+        }
+      ],
       "execution_count": null
     },
     {
@@ -61,7 +76,7 @@
         "wandb.login()\n",
         "\n",
         "# Name the project\n",
-        "%env WANDB_PROJECT=Qwen2-0.5B-GRPO-test"
+        "%env WANDB_PROJECT=Cosmos-8B-Instruct-GRPO"
       ],
       "metadata": {
         "id": "BdwP3GYJ42Rk"
@@ -76,8 +91,11 @@
       "source": [
         "from datasets import load_dataset\n",
         "\n",
-        "dataset_id = \"AI-MO/NuminaMath-TIR\"\n",
-        "train_dataset, test_dataset = load_dataset(dataset_id, split=[\"train[:5%]\", \"test[:5%]\"])"
+        "dataset_id = \"alibayram/turkish_mmlu\"\n",
+        "train_dataset = load_dataset(dataset_id, split=[\"train\"])\n",
+        "train_dataset = train_dataset[0]\n",
+        "train_dataset = train_dataset.remove_columns([\"bolum\",\"konu\",\"aciklama\",\"__index_level_0__\"])\n",
+        "train_dataset = train_dataset.shuffle(seed=42).select(range(6600))"
       ],
       "metadata": {
         "trusted": true,
@@ -105,24 +123,25 @@
       "cell_type": "code",
       "source": [
         "SYSTEM_PROMPT = (\n",
-        "    \"A conversation between User and Assistant. The user asks a question, and the Assistant solves it. The assistant \"\n",
-        "    \"first thinks about the reasoning process in the mind and then provides the user with the answer. The reasoning \"\n",
-        "    \"process and answer are enclosed within <think> </think> and <answer> </answer> tags, respectively, i.e., \"\n",
-        "    \"<think> reasoning process here </think><answer> answer here </answer>\"\n",
+        "    \"Kullanıcı ve asistan arasında bir konuşma. Kullanıcı bir soru soruyor, asistan bu soruyu çözüyor ve cevap veriyor. Asistan \"\n",
+        "    \"soruyu öncelikle kendi zihininde düşünüyor ve sonra kullanıcıya yanıt veriyor. Akıl yürütme \"\n",
+        "    \"işlemi <düşünce> </düşünce>, cevaplar <cevap> </cevap> etiketleri arasında gösteriliyor.\"\n",
+        "    \"Örneğin: <düşünce>Akıl yürütme kısmı</düşünce><cevap>Cevap Kısmı</cevap>\"\n",
         ")\n",
         "\n",
         "\n",
         "def make_conversation(example):\n",
+        "    secenekler = [a + b for a,b in zip([\"A)\",\"B)\",\"C)\",\"D)\",\"E)\"],example[\"secenekler\"])]\n",
+        "    user_content = example[\"soru\"] + \" Seçenekler: \" + \" \".join(secenekler)\n",
         "    return {\n",
         "        \"prompt\": [\n",
         "            {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
-        "            {\"role\": \"user\", \"content\": example[\"problem\"]},\n",
+        "            {\"role\": \"user\", \"content\": user_content},\n",
         "        ],\n",
         "    }\n",
         "\n",
-        "\n",
         "train_dataset = train_dataset.map(make_conversation)\n",
-        "test_dataset = test_dataset.map(make_conversation)"
+        "train_dataset = train.remove_columns([\"secenekler\",\"soru\"])"
       ],
       "metadata": {
         "trusted": true,
@@ -135,7 +154,6 @@
       "id": "19edd608-3394-4cd2-af56-2716ac8738c8",
       "cell_type": "code",
       "source": [
-        "train_dataset = train_dataset.remove_columns([\"messages\", \"problem\"])\n",
         "print(train_dataset)"
       ],
       "metadata": {
@@ -150,9 +168,15 @@
       "cell_type": "code",
       "source": [
         "import torch\n",
-        "from transformers import AutoModelForCausalLM\n",
+        "from transformers import AutoModelForCausalLM, BitsAndBytesConfig\n",
         "\n",
-        "model_id = \"Qwen/Qwen2-0.5B-Instruct\"\n",
+        "bnb_config = BitsAndBytesConfig(\n",
+        "    load_in_4bit=True,\n",
+        "    bnb_4bit_quant_type=\"nf4\",\n",
+        "    bnb_4bit_use_double_quant=True,\n",
+        ")\n",
+        "\n",
+        "model_id = \"ytu-ce-cosmos/Turkish-Llama-8b-Instruct-v0.1\"\n",
         "model = AutoModelForCausalLM.from_pretrained(\n",
         "    model_id,\n",
         "    torch_dtype=\"auto\",\n",
@@ -200,7 +224,7 @@
         "\n",
         "def format_reward(completions, **kwargs):\n",
         "    \"\"\"Reward function that checks if the completion has a specific format.\"\"\"\n",
-        "    pattern = r\"^<think>.*?</think>\\s*<answer>.*?</answer>$\"\n",
+        "    pattern = r\"^<duşünce>.*?</düşünce>\\s*<cevap>.*?</cevap>$\"\n",
         "    completion_contents = [completion[0][\"content\"] for completion in completions]\n",
         "    matches = [re.match(pattern, content) for content in completion_contents]\n",
         "    rewards_list = [1.0 if match else 0.0 for match in matches]\n",
@@ -217,24 +241,23 @@
       "id": "61b49cd6-c211-4001-9f26-212c69aa3e25",
       "cell_type": "code",
       "source": [
-        "from math_verify import LatexExtractionConfig, parse, verify\n",
-        "\n",
-        "\n",
         "def accuracy_reward(completions, **kwargs):\n",
         "    \"\"\"Reward function that checks if the completion is the same as the ground truth.\"\"\"\n",
         "    solutions = kwargs[\"solution\"]\n",
         "    completion_contents = [completion[0][\"content\"] for completion in completions]\n",
         "    rewards = []\n",
         "    for content, solution in zip(completion_contents, solutions):\n",
-        "        gold_parsed = parse(solution, extraction_mode=\"first_match\", extraction_config=[LatexExtractionConfig()])\n",
-        "        answer_parsed = parse(content, extraction_mode=\"first_match\", extraction_config=[LatexExtractionConfig()])\n",
-        "        if len(gold_parsed) != 0:\n",
-        "            try:\n",
-        "                rewards.append(float(verify(answer_parsed, gold_parsed)))\n",
-        "            except Exception:\n",
-        "                rewards.append(0.0)\n",
+        "        correct_letter = correct_answer.upper()\n",
+        "        # Regex to find standalone option letters (A-E) followed by optional ')' and punctuation/whitespace\n",
+        "        option_pattern = re.compile(r'\\b([A-E])\\)?(?=\\s|\\.|,|$)', re.IGNORECASE)\n",
+        "        matches = option_pattern.findall(response.upper())\n",
+        "        letters_found = [m.upper() for m in matches]\n",
+        "\n",
+        "        # Check if correct_letter is present and no incorrect letters are mentioned\n",
+        "        if correct_letter in letters_found and all(letter == correct_letter for letter in letters_found):\n",
+        "            rewards.append(1.0)  # Full reward for correct answer and no other options\n",
         "        else:\n",
-        "            rewards.append(1.0)\n",
+        "            rewards.append(0.0)  # No reward otherwise\n",
         "    return rewards"
       ],
       "metadata": {
@@ -252,7 +275,7 @@
         "\n",
         "# Configure training arguments using GRPOConfig\n",
         "training_args = GRPOConfig(\n",
-        "    output_dir=\"Qwen2-0.5B-GRPO-test\",\n",
+        "    output_dir=\"Cosmos-8B-GRPO\",\n",
         "    learning_rate=1e-5,\n",
         "    remove_unused_columns=False,  # to access the solution column in accuracy_reward\n",
         "    gradient_accumulation_steps=16,\n",
