Colab kullanılarak oluşturuldu

--- a/Turkish_MMLU.ipynb
+++ b/Turkish_MMLU.ipynb
@@ -553,7 +553,7 @@
       "id": "29f3de3e-7a5d-4b28-a675-7db20104022c",
       "cell_type": "code",
       "source": [
-        "!pip install  -U -q torch trl peft bitsandbytes wandb\n",
+        "!pip install  -U -q trl peft bitsandbytes wandb\n",
         "# Tested with transformers==4.47.1, trl==0.14.0, datasets==3.2.0, peft==0.14.0, accelerate==1.2.1"
       ],
       "metadata": {
@@ -580,7 +580,7 @@
           ]
         }
       ],
-      "execution_count": 10
+      "execution_count": null
     },
     {
       "id": "15510df5-7dfb-4451-8c77-d57642ac7cbe",
@@ -634,7 +634,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 11
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -654,7 +654,7 @@
         "outputId": "a5fb028b-941f-4988-a021-df3fcea9c6de"
       },
       "id": "BdwP3GYJ42Rk",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -828,10 +828,10 @@
         "    completion_contents = [completion[0][\"content\"] for completion in completions]\n",
         "    rewards = []\n",
         "    for content, solution in zip(completion_contents, solutions):\n",
-        "        correct_letter = correct_answer.upper()\n",
+        "        correct_letter = solution.upper()\n",
         "        # Regex to find standalone option letters (A-E) followed by optional ')' and punctuation/whitespace\n",
         "        option_pattern = re.compile(r'\\b([A-E])\\)?(?=\\s|\\.|,|$)', re.IGNORECASE)\n",
-        "        matches = option_pattern.findall(response.upper())\n",
+        "        matches = option_pattern.findall(content.upper())\n",
         "        letters_found = [m.upper() for m in matches]\n",
         "\n",
         "        # Check if correct_letter is present and no incorrect letters are mentioned\n",
