--- a/Turkish_MMLU.ipynb
+++ b/Turkish_MMLU.ipynb
@@ -2727,7 +2727,9 @@
         ")\n",
         "\n",
         "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-        "tokenizer.add_special_tokens({'pad_token': '[PAD]'})"
+        "if tokenizer.pad_token is None:\n",
+        "  tokenizer.add_special_tokens({'pad_token': '[PAD]'})\n",
+        "  model.resize_token_embeddings(len(tokenizer))"
       ],
       "metadata": {
         "trusted": true,
@@ -2778,31 +2780,6 @@
         }
       ],
       "execution_count": 26
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model.resize_token_embeddings(len(tokenizer))\n",
-        "print(\"Pad token added.\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Y2jmKD5uqyJT",
-        "outputId": "d2fbd4c6-8062-4acd-ddf0-5d7c47892ec4"
-      },
-      "id": "Y2jmKD5uqyJT",
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Pad token added.\n"
-          ]
-        }
-      ]
     },
     {
       "id": "43d9f690-c1a6-4756-9c5f-7788f82cfead",
