--- a/Turkish_MMLU.ipynb
+++ b/Turkish_MMLU.ipynb
@@ -2782,6 +2782,31 @@
       "execution_count": 26
     },
     {
+      "cell_type": "code",
+      "source": [
+        "model.resize_token_embeddings(len(tokenizer))\n",
+        "print(\"Pad token added.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y2jmKD5uqyJT",
+        "outputId": "d2fbd4c6-8062-4acd-ddf0-5d7c47892ec4"
+      },
+      "id": "Y2jmKD5uqyJT",
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pad token added.\n"
+          ]
+        }
+      ]
+    },
+    {
       "id": "43d9f690-c1a6-4756-9c5f-7788f82cfead",
       "cell_type": "code",
       "source": [
@@ -2889,6 +2914,7 @@
         "    max_prompt_length=128,  # default: 512\n",
         "    # Parameters related to reporting and saving\n",
         "    report_to=\"wandb\",\n",
+        "    use_vllm=True,\n",
         "    logging_steps=1,\n",
         "    push_to_hub=True,\n",
         "    save_strategy=\"steps\",\n",
